--- a/templates/kerven/index.html.twig
+++ b/templates/kerven/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Kerven's Personal Page{% endblock %}
+{% block title %}{{ page.title }}{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -11,23 +11,25 @@
     <div class="container">
         <div class="content-wrapper">
             <div class="image-container">
-                <img src="{{ asset('images/kerven.jpg') }}" alt="Kerven's Profile Picture" class="profile-image">
+                <img src="{{ asset('images/' ~ page.photo) }}" alt="Kerven's Profile Picture" class="profile-image">
             </div>
             <div class="text-content">
-                <h1>Welcome to My Page</h1>
+                <h1>{{ page.title }}</h1>
                 
-                <p>Hello! I'm Kerven, and I'm passionate about web development and technology. I enjoy creating innovative solutions and learning new programming languages and frameworks. My journey in software development has been exciting and full of continuous learning opportunities.</p>
-                
-                <p>When I'm not coding, I love exploring new technologies, contributing to open-source projects, and sharing knowledge with the developer community. I believe in the power of technology to make a positive impact on people's lives.</p>
+                <div class="description">
+                    {{ page.description|nl2br }}
+                </div>
 
                 <h2>My Interests</h2>
                 <ul>
-                    <li>Web Development</li>
-                    <li>Artificial Intelligence</li>
-                    <li>Cloud Computing</li>
-                    <li>UI/UX Design</li>
-                    <li>Open Source Projects</li>
+                    {% for interest in page.interests|split('\n') %}
+                        <li>{{ interest }}</li>
+                    {% endfor %}
                 </ul>
+
+                <div class="edit-link">
+                    <a href="{{ path('app_kerven_edit') }}">Edit Page</a>
+                </div>
             </div>
         </div>
     </div>
